--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
@@ -10,5 +10,8 @@ patches:
   - path: ../patch_source_image.patch.yaml
     target:
       kind: Pipeline
+  - path: ./patch_build_args.patch.yaml
+    target:
+      kind: Pipeline
 openapi:
   path: ../pipeline_schema.json
