add must-gather as part of SO (#370)
* add must-gather as part of SO

* add generate must gather Dockerfile option

* update Dockerfile template & fix generator error

* Fix lint issue and fix review comments

* Install rsync and tar pkg Dockerfile

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -334,6 +334,7 @@ repositories:
     - serving/ingress/.*
     - olm-catalog/serverless-operator/Dockerfile
     - olm-catalog/serverless-operator-index/Dockerfile
+    - must-gather/.*
   e2e:
   - match: ^operator-e2e$
   - match: ^test-upgrade$
