--- a/pkg/konfluxgen/integration-test-scenario.template.yaml
+++ b/pkg/konfluxgen/integration-test-scenario.template.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   params: 
     - name: POLICY_CONFIGURATION
-      value: rhtap-releng-tenant/tmp-onboard-policy
+      value: {{{ .ECPolicyConfiguration }}}
     - name: TIMEOUT
       value: "45m0s"
   application: {{{ truncate ( sanitize .ApplicationName ) }}}
