Add required releaseNotes to RPA template

--- a/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-fbc.template.yaml
@@ -19,6 +19,12 @@ spec:
       product_id: 579
       product_name: "OpenShift Serverless"
       product_version: "{{{ .SOVersion }}}"
+      references:
+        - https://docs.redhat.com/en/documentation/red_hat_openshift_serverless
+      solution: "The container images provided by this update can be downloaded from the Red Hat container registry at registry.redhat.io"
+      description: "Release {{{ .SOVersion }}} of OpenShift Serverless"
+      topic: "Release {{{ .SOVersion }}} of OpenShift Serverless"
+      synopsis: "OpenShift Serverless Release {{{ .SOVersion }}}"
     fbc:
       {{{- if .StagedIndex }}}
       stagedIndex: true
