--- a/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
+++ b/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
@@ -1,11 +1,13 @@
 # DO NOT EDIT! Generated Dockerfile for {{.main}}.
-ARG MUSTGATHER={{.must_gather_base}}
+ARG CLI_ARTIFACTS={{ .oc_cli_artifacts }}
 ARG RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
-FROM $MUSTGATHER AS mustgather
+FROM $CLI_ARTIFACTS AS cli-artifacts
 
 FROM $RUNTIME
 
-COPY --from=mustgather /usr/bin/oc /usr/bin/oc
+ARG TARGETARCH
+
+COPY --from=cli-artifacts /usr/share/openshift/linux_$TARGETARCH/{{ .oc_binary_name }} /usr/bin/oc
 
 # Copy all collection scripts to /usr/bin
 COPY must-gather/bin/* /usr/bin/
