--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -44,6 +44,10 @@ config:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
       - onDemand: true
