--- a/config/kn-plugin-event.yaml
+++ b/config/kn-plugin-event.yaml
@@ -10,6 +10,10 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
     release-next:
