--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -16,6 +16,10 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - skipCron: true
         useClusterPool: true
         version: "4.17"
