--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -24,6 +24,10 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
       - onDemand: true
