--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -329,6 +329,14 @@ repositories:
   - name: lp-rosa-classic
     releaseBuildConfiguration:
       base_images:
+        cli:
+          name: "4.17"
+          namespace: ocp
+          tag: cli
+        cli-ocm:
+          name: cli-ocm
+          namespace: ci
+          tag: latest
         rosa-aws-cli:
           name: rosa-aws-cli
           namespace: ci
