--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -38,7 +38,7 @@ spec:
       secret: {{{ .PyxisSecret }}}
       server: {{{ .PyxisServer }}}
     sign:
-      configMapName: "hacbs-signing-pipeline-config-redhatrelease2"
+      configMapName: {{{ .SignCMName }}}
   pipeline:
     pipelineRef:
       resolver: git
