Create logs dir and make runtime user owner

--- a/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
+++ b/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
@@ -14,6 +14,10 @@ COPY must-gather/bin/* /usr/bin/
 
 RUN microdnf install -y rsync tar
 
+ENV LOGS_DIR="/must-gather"
+RUN mkdir -p $LOGS_DIR && \
+    chown -R 65532:65532 $LOGS_DIR
+
 USER 65532
 
 LABEL \
