--- a/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
+++ b/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
@@ -4,6 +4,7 @@ ARG GO_RUNTIME=registry.access.redhat.com/ubi8/ubi-minimal
 
 FROM $GO_BUILDER as builder
 
+WORKDIR /workspace
 COPY . .
 
 ENV CGO_ENABLED=1
@@ -22,6 +23,7 @@ RUN microdnf install socat tar
 {{- end }}
 
 COPY --from=builder /usr/bin/main {{.app_file}}
+COPY --from=builder /workspace/LICENSE /licenses/
 
 RUN ln -s {{.app_file}} /usr/local/bin/deploy && \
 	ln -s {{.app_file}} /usr/local/bin/scaffold && \
