--- a/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
+++ b/pkg/project/testoutput/openshift/ci-operator/knative-images/discover/Dockerfile
@@ -19,7 +19,7 @@ RUN microdnf update tzdata -y && microdnf reinstall tzdata -y
 RUN microdnf install rsync
 
 COPY --from=builder /usr/bin/main /usr/bin/discover
-COPY --from=builder /workspace/LICENSE /licenses/
+COPY LICENSE /licenses/
 
 USER 65532
 
