--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/patch_build_args.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/patch_build_args.patch.yaml
@@ -8,9 +8,19 @@ spec:
       description: Array of --build-arg values ("arg=value" strings) for buildah
       type: array
       default: []
+    - name: skip-fbc-related-image-check
+      description: Skip fbc-related-image-check
+      type: string
+      default: "false"
   tasks:
     - name: build-container
       params:
         - name: BUILD_ARGS
           value:
             - $(params.build-args[*])
+    - name: fbc-related-image-check
+      when:
+        - input: $(params.skip-fbc-related-image-check)
+          operator: in
+          values:
+            - "false"
