--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/kustomization.yaml
@@ -13,5 +13,8 @@ patches:
   - path: ./patch_build_args.patch.yaml
     target:
       kind: Pipeline
+  - path: ./patch_related_image_check.patch.yaml
+    target:
+      kind: Pipeline
 openapi:
   path: ../pipeline_schema.json
