Use registry-standard-stage policy for stage RPA

--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   applications: [{{{ truncate ( sanitize .ApplicationName ) }}}]
   origin: ocp-serverless-tenant
-  policy: registry-standard
+  policy: {{{ .Policy }}}
   data:
     releaseNotes:
       product_id: 579
