Use `configure-pac-no-mr`
Use https://issues.redhat.com/browse/STONEBLD-2947

Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/pkg/konfluxgen/dockerfile-component.template.yaml
+++ b/pkg/konfluxgen/dockerfile-component.template.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   annotations:
     build.appstudio.openshift.io/pipeline: '{"name":"docker-build","bundle":"latest"}'
+    build.appstudio.openshift.io/request: configure-pac-no-mr
   name: {{ sanitize .ComponentName }}
 spec:
   componentName: {{ sanitize .ComponentName }}
