--- a/.konflux/applications/serverless-operator-135-fbc-418/tests/ec-test.yaml
+++ b/.konflux/applications/serverless-operator-135-fbc-418/tests/ec-test.yaml
@@ -7,7 +7,7 @@ spec:
     - name: POLICY_CONFIGURATION
       value: rhtap-releng-tenant/fbc-stage
     - name: TIMEOUT
-      value: "45m0s"
+      value: "120m"
   application: serverless-operator-135-fbc-418
   contexts:
     - description: Application testing
