--- a/.konflux/applications/serverless-operator-135-fbc-418/components/serverless-index-135-fbc-418.yaml
+++ b/.konflux/applications/serverless-operator-135-fbc-418/components/serverless-index-135-fbc-418.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   annotations:
     build.appstudio.openshift.io/pipeline: '{"name":"docker-build","bundle":"latest"}'
+    build.appstudio.openshift.io/request: configure-pac-no-mr
   name: serverless-index-135-fbc-418
 spec:
   componentName: serverless-index-135-fbc-418
