--- a/.konflux/applications/serverless-operator-135/components/serverless-bundle-135.yaml
+++ b/.konflux/applications/serverless-operator-135/components/serverless-bundle-135.yaml
@@ -3,6 +3,7 @@ kind: Component
 metadata:
   annotations:
     build.appstudio.openshift.io/pipeline: '{"name":"docker-build","bundle":"latest"}'
+    build.appstudio.openshift.io/request: configure-pac-no-mr
   name: serverless-bundle-135
 spec:
   componentName: serverless-bundle-135
