--- a/.konflux/applications/serverless-operator-135/components/serverless-ingress-135.yaml
+++ b/.konflux/applications/serverless-operator-135/components/serverless-ingress-135.yaml
@@ -19,4 +19,4 @@ spec:
       url: https://github.com/openshift-knative/serverless-operator.git
       context: 
       dockerfileUrl: serving/ingress/Dockerfile
-      revision: main
+      revision: release-1.35
