--- a/.konflux/applications/serverless-operator-136-fbc-418/components/serverless-index-136-fbc-418.yaml
+++ b/.konflux/applications/serverless-operator-136-fbc-418/components/serverless-index-136-fbc-418.yaml
@@ -4,19 +4,14 @@ metadata:
   annotations:
     build.appstudio.openshift.io/pipeline: '{"name":"docker-build","bundle":"latest"}'
     build.appstudio.openshift.io/request: configure-pac-no-mr
-  name: serverless-must-gather-135
+  name: serverless-index-136-fbc-418
 spec:
-  componentName: serverless-must-gather-135
-  application: serverless-operator-135
+  componentName: serverless-index-136-fbc-418
+  application: serverless-operator-136-fbc-418
    
-  build-nudges-ref:
-    
-    - "serverless-bundle-135"
-    
-  
   source:
     git:
       url: https://github.com/openshift-knative/serverless-operator.git
-      context: 
-      dockerfileUrl: must-gather/Dockerfile
-      revision: release-1.35
+      context: ./olm-catalog/serverless-operator-index/v4.18
+      dockerfileUrl: Dockerfile
+      revision: main
