[release-v1.15] Add signed image override to client config

--- a/config/client.yaml
+++ b/config/client.yaml
@@ -3,6 +3,9 @@ config:
     release-v1.15:
       konflux:
         enabled: true
+      imageOverrides:
+        - name: CLI_ARTIFACTS
+          pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.15.0
       openShiftVersions:
       - skipCron: true
         useClusterPool: true
