updated the patch to remove sast-coverity-check and coverity-availability-check

--- a/pkg/konfluxgen/kustomize/kustomize-java-docker-build/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-java-docker-build/kustomization.yaml
@@ -22,6 +22,9 @@ patches:
   - path: ../patch_build_platforms_default.patch.yaml
     target:
       kind: Pipeline
+  - path: ../patch_sast_coverity_check.patch.yaml
+    target:
+      kind: Pipeline
   - patch: |-
       - op: replace
         path: /metadata/name
