--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -569,6 +569,7 @@ repositories:
   - match: ^operator-e2e$
   - match: ^test-upgrade$
     timeout: 1h30m0s
+    jobTimeout: 5h0m0s
   - ignoreError: true
     match: ^upstream-e2e$
     skipCron: true
