Update packages in generated Dockerfiles

--- a/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
+++ b/cmd/generate/dockerfile-templates/MustGatherDockerfile.template
@@ -13,6 +13,7 @@ COPY --from=cli-artifacts /usr/share/openshift/linux_$TARGETARCH/{{ .oc_binary_n
 COPY must-gather/bin/* /usr/bin/
 COPY LICENSE /licenses/
 
+RUN microdnf upgrade -y
 RUN microdnf install -y rsync tar
 
 ENV LOGS_DIR="/must-gather"
