--- a/cmd/generate/dockerfile-templates/DefaultDockerfile.template
+++ b/cmd/generate/dockerfile-templates/DefaultDockerfile.template
@@ -16,6 +16,8 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
+RUN microdnf upgrade -y
+
 {{- range $c := .additional_instructions }}
 {{ $c }}
 {{- end }}
