--- a/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
+++ b/cmd/generate/dockerfile-templates/FuncUtilDockerfile.template
@@ -17,6 +17,7 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
+RUN microdnf upgrade -y
 RUN microdnf install socat tar
 {{- range $c := .additional_instructions }}
 {{ $c }}
