Add Cosign Secret Name to RPA config
Align with https://gitlab.cee.redhat.com/releng/konflux-release-data/-/merge_requests/3463

--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -39,6 +39,7 @@ spec:
       server: {{{ .PyxisServer }}}
     sign:
       configMapName: {{{ .SignCMName }}}
+      cosignSecretName: {{{ .SignSecretName }}}
   pipeline:
     pipelineRef:
       resolver: git
