Sync Konflux configurations for serverless operator

--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-stage.yaml
@@ -37,6 +37,7 @@ spec:
       allowedPackages: [serverless-operator]
     sign:
       configMapName: hacbs-signing-pipeline-config-staging-redhatrelease2
+      cosignSecretName: konflux-cosign-signing-stage
   pipeline:
     pipelineRef:
       resolver: git
