--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-stage.yaml
@@ -145,6 +145,7 @@ spec:
       server: stage
     sign:
       configMapName: hacbs-signing-pipeline-config-staging-redhatrelease2
+      cosignSecretName: konflux-cosign-signing-stage
   pipeline:
     pipelineRef:
       resolver: git
@@ -157,4 +158,4 @@ spec:
           value: "pipelines/rh-advisories/rh-advisories.yaml"
     serviceAccountName: release-registry-staging
     timeouts:
-      pipeline: "4h0m0s"
+      pipeline: "6h0m0s"
