--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-prod.yaml
@@ -36,6 +36,7 @@ spec:
       allowedPackages: [serverless-operator]
     sign:
       configMapName: hacbs-signing-pipeline-config-redhatrelease2
+      cosignSecretName: konflux-cosign-signing-production
   pipeline:
     pipelineRef:
       resolver: git
