--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-prod.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   applications: [serverless-operator-135]
   origin: ocp-serverless-tenant
-  policy: registry-standard
+  policy: registry-ocp-serverless-prod
   data:
     releaseNotes:
       product_id: 579
