Generate dependabot configs
Signed-off-by: Pierangelo Di Pilato <pierdipi@redhat.com>

--- a/config/eventing-hyperfoil-benchmark.yaml
+++ b/config/eventing-hyperfoil-benchmark.yaml
@@ -1,6 +1,7 @@
 config:
   branches:
     main:
+      dependabotEnabled: false
       openShiftVersions:
       - skipCron: true
         version: "4.14"
