Fix workflow inputs

--- a/.github/workflows/generate-release-crs.yaml
+++ b/.github/workflows/generate-release-crs.yaml
@@ -17,8 +17,8 @@ on:
         description: "Type to release"
         type: choice
         options:
-          - components
-          - FBCs
+          - component
+          - FBC
         required: true
       skip-apply:
         description: "Skip override-snapshot apply"
