--- a/.konflux/applications/serverless-operator-135-fbc-418/tests/override-snapshot-ec-test.yaml
+++ b/.konflux/applications/serverless-operator-135-fbc-418/tests/override-snapshot-ec-test.yaml
@@ -8,6 +8,8 @@ spec:
       value: rhtap-releng-tenant/fbc-standard
     - name: TIMEOUT
       value: "120m"
+    - name: WORKERS
+      value: "8"
   application: serverless-operator-135-fbc-418
   contexts:
     - description: Override Snapshot testing
