--- a/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-stage.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-135-1350-fbc-stage.yaml
@@ -22,11 +22,20 @@ spec:
       product_name: "OpenShift Serverless"
       product_version: "1.35.0"
       references:
-        - https://docs.redhat.com/en/documentation/red_hat_openshift_serverless
-      solution: "The container images provided by this update can be downloaded from the Red Hat container registry at registry.redhat.io"
-      description: "Release 1.35.0 of OpenShift Serverless"
-      topic: "Release 1.35.0 of OpenShift Serverless"
-      synopsis: "OpenShift Serverless Release 1.35.0"
+        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
+      type: "RHEA"
+      solution: |
+        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
+        enables containers, microservices and functions to run "serverless".
+        Serverless applications can scale up and down (to zero) on demand and be triggered by a
+        number of event sources. OpenShift Serverless integrates with a number of
+        platform services, such as Monitoring and it is based on the open
+        source project Knative.
+      description: "The 1.35.0 release of Red Hat OpenShift Serverless Operator."
+      topic: |
+        The 1.35.0 GA release of Red Hat OpenShift Serverless Operator.
+        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
+      synopsis: "Red Hat OpenShift Serverless Release 1.35.0"
     fbc:
       stagedIndex: true
       fromIndex: "registry-proxy.engineering.redhat.com/rh-osbs/iib-pub-pending:{{ OCP_VERSION }}"
