Use `release-1.` as default for revision
Co-authored-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/.github/workflows/generate-release-crs.yaml
+++ b/.github/workflows/generate-release-crs.yaml
@@ -4,7 +4,7 @@ on:
     inputs:
       revision:
         description: "SO branch or revision with the manifests"
-        default: "main"
+        default: "release-1."
         required: true
       environment:
         description: "Environment to release to"
