--- a/config/serving-net-istio.yaml
+++ b/config/serving-net-istio.yaml
@@ -1,11 +1,5 @@
 config:
   branches:
-    release-v1.12:
-      openShiftVersions:
-      - useClusterPool: true
-        version: "4.16"
-      - onDemand: true
-        version: "4.12"
     release-v1.14:
       openShiftVersions:
       - useClusterPool: true
@@ -32,6 +26,18 @@ config:
         version: "4.17"
       - onDemand: true
         version: "4.13"
+    release-v1.17:
+      konflux:
+        enabled: true
+      openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
+      - useClusterPool: true
+        version: "4.17"
+      - onDemand: true
+        version: "4.14"
 repositories:
 - dockerfiles: {}
   ignoreConfigs: {}
