Enable `skipLayers` for pyxis for component RPAs

--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -46,6 +46,12 @@ spec:
     pyxis:
       secret: {{{ .PyxisSecret }}}
       server: {{{ .PyxisServer }}}
+      # This causes the release pipeline to not upload layer size information
+      # to pyxis which will save on runtime at the cost of data completeness in
+      # pyxis. The side-effects are:
+      # * If you are a base image, like ubi9, then partners cannot certify that they build on top of you.
+      # * Size information is not displayed in the catalog. This is very low business impact.
+      skipLayers: true
     sign:
       configMapName: {{{ .SignCMName }}}
       cosignSecretName: {{{ .SignSecretName }}}
