--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-prod.yaml
@@ -152,6 +152,12 @@ spec:
     pyxis:
       secret: pyxis-prod-secret
       server: production
+      # This causes the release pipeline to not upload layer size information
+      # to pyxis which will save on runtime at the cost of data completeness in
+      # pyxis. The side-effects are:
+      # * If you are a base image, like ubi9, then partners cannot certify that they build on top of you.
+      # * Size information is not displayed in the catalog. This is very low business impact.
+      skipLayers: true
     sign:
       configMapName: hacbs-signing-pipeline-config-redhatrelease2
       cosignSecretName: konflux-cosign-signing-production
@@ -168,3 +174,4 @@ spec:
     serviceAccountName: release-registry-prod
     timeouts:
       pipeline: "10h0m0s"
+      tasks: "10h0m0s"
